--- a/SRC/pages/contact.html
+++ b/SRC/pages/contact.html
@@ -45,8 +45,8 @@
                     <div class="cs-item number">
                         <div class="icon"><i class="fas fa-phone"></i></i></div>
                         <div class="text">
-                            <div class="placeHolder">Phone</div>
-                            <div class="info"> </div>
+                            <div class="placeHolder">Phone </div>
+                            <div class="info">Phone number provided upon request</div>
                         </div>
                     </div>
                 </div>
