--- a/SRC/pages/hobbies.html
+++ b/SRC/pages/hobbies.html
@@ -35,6 +35,8 @@
                 <div class="hobbies-header">
                     <div class="header-text">My Passions</div>
                     <div class="header-line"></div>
+                    <div class="header-text">My benevolat</div>
+                    <div class="header-line"></div>
                 </div>
                 <div class="section">
                     <div class="row first">
