--- a/SRC/pages/hobbies.html
+++ b/SRC/pages/hobbies.html
@@ -32,12 +32,16 @@
     <div class="page">
         <main class="hobbies-main">
             <div class="hobbies-section">
-                <div class="hobbies-header">
-                    <div class="header-text">My Passions</div>
-                    <div class="header-line"></div>
-                    <div class="header-text">My benevolat</div>
-                    <div class="header-line"></div>
-                </div>
+                <div class="hobbies-container">
+                    <div class="hobbies-header">
+                        <div class="header-text">My Passions</div>
+                        <div class="header-line"></div>
+                    </div>
+                    <div class="hobbies-header2">
+                        <div class="header-text">My Volunteering</div>
+                        <div class="header-line"></div>
+                    </div>
+                </div>                
                 <div class="section">
                     <div class="row first">
                         <div class="hobbies 1">
@@ -59,7 +63,7 @@
                             </div>
                             <div class="header">
                                 <div class="header-text">ESAIP Student Sports Union</div>
-                                <div class="header-line"></div>
+                                <div class="header-line2"></div>
                             </div>
                             <div class="text">
                                 As the Founder and former President of the ESAIP Student Sports Union, I successfully established a partnership with the FFSU league, enabling our school to enter the prestigious French Grandes Écoles championship. This initiative introduced competitive sports to the school, complementing the existing activities and fostering a deeper sense of teamwork and collaboration among students.
@@ -67,7 +71,7 @@
                         </div>
                         <div class="hobbies 2">
                             <div class="image">
-                                <img src="../../Assets/gallerycountry/Design sans titre (6).png" alt="Content Creator">
+                                <img src="../../Assets/creator.jpg" alt="Content Creator">
                             </div>
                             <div class="header">
                                 <div class="header-text">Content Creator</div>
@@ -85,11 +89,11 @@
                     <div class="row third">
                         <div class="hobbies 5">
                             <div class="image">
-                                <img src="../../Assets/gallerycountry/vm.png" alt="vMoove">
+                                <img src="../../Assets/chess.jpg" alt="Association">
                             </div>
                             <div class="header">
-                                <div class="header-text">vMoove</div>
-                                <div class="header-line"></div>
+                                <div class="header-text">Association</div>
+                                <div class="header-line2"></div>
                             </div>
                             <div class="text">
                                 I founded an association aimed at promoting interactions within my online community. Our objective is to establish a competitive system dominating France by implementing and organizing tournaments, finding partners, and introducing eSports. This will not only enhance our community engagement but also promote the association throughout Europe.
