--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="SRC/pages/education.html">Education</a>
           
             <a href="SRC/pages/career.html">Career</a>
-            <a href="SRC/pages/hobbies.html">Hobbzies</a>
+            <a href="SRC/pages/hobbies.html">Hobbies</a>
        
         </div>
 
